# orca

./: .dockerignore  .env.local.example  .gitignore  BUILDING.md  CHANGELOG.md  Dockerfile.linux  README.md  index.html  notes.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/plans/: ai-shell.md
launch-video/: package-lock.json
launch-video/src/: Composition.tsx  Root.tsx
launch-video/src/components/: OrcaIcon.tsx
mobile/: README.md  app.json  global.css  package-lock.json  package.json  tailwind.config.js
mobile/.chell/: context.json
mobile/.expo/types/: router.d.ts
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/app/: _layout.tsx  connect.tsx  index.tsx  settings.tsx
mobile/app/(tabs)/: _layout.tsx  assistant.tsx  index.tsx  settings.tsx  terminal.tsx
mobile/app/project/: _layout.tsx
mobile/components/: AssistantTerminalWebView.tsx  OrcaLogo.tsx  ThemeProvider.tsx
mobile/components/ui/: badge.tsx  button.tsx  index.ts  tabs.tsx
mobile/ios/: Podfile
mobile/ios/AppIcon.icon/: icon.json
mobile/ios/ChellPortal.xcodeproj/: project.pbxproj
mobile/lib/: portalCrypto.ts  utils.ts  websocket.ts
mobile/stores/: connectionStore.ts  gitStore.ts  terminalStore.ts  themeStore.ts
mobile/types/: index.ts
scripts/: build-linux-docker.sh  build-linux.sh  build-macos.sh  build-windows.ps1  bump-version.sh  deb-fix.sh  release.sh  upload-to-cloudflare.ps1  upload-to-cloudflare.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Chell.entitlements  Info.plist  tauri.conf.json
src-tauri/Icons.xcassets/AppIcon.appiconset/: Contents.json
src-tauri/Orca.icon/: icon.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  git.rs  github.rs  lib.rs  main.rs  portal.rs
src/components/: AssistantLauncher.tsx  ChellLogo.tsx  CommandPreview.tsx  CustomThemeEditor.tsx  DiffPanel.tsx  GitPanel.tsx  NotesPanel.tsx  Onboarding.tsx  OrcaLogo.tsx  RemotePortalSettings.tsx  SettingsSheet.tsx  SmartShell.tsx  Terminal.tsx  UpdateChecker.tsx
src/components/ui/: button.tsx  (+5 more)
src/lib/: assistants.ts  colorUtils.ts  portalCrypto.ts  utils.ts
src/pages/: HomePage.tsx  ProjectPage.tsx  TerminalWindow.tsx
src/stores/: gitStore.ts  portalStore.ts  projectStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: terminalLinkProvider.ts
workers/relay/: E2E_ENCRYPTION_STATUS.md  README.md  package-lock.json  package.json  wrangler.toml
workers/releases/: package.json  wrangler.toml
(+11 files in other folders)
