[package]
name = "chell"
version = "0.1.92"
description = "A cross-platform visual git client with integrated terminal for AI coding assistants"
authors = ["you"]
edition = "2021"

[lib]
name = "chell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
which = "6"
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
notify = "6"
notify-debouncer-mini = "0.4"
rand = "0.8"
hostname = "0.4"
chrono = "0.4"

# portable-pty 0.9.0 is broken on Windows ConPTY (wezterm/wezterm#6783)
# Use 0.8.1 on Windows, 0.9 on macOS/Linux
[target.'cfg(not(target_os = "windows"))'.dependencies]
portable-pty = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
portable-pty = "0.8.1"
